Bug 1618351 - Floor subgrid auto-fill repeat count at zero to avoid underflow of unsigned integer mRepeatAutoEnd.  r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D64637

--HG--
extra : moz-landing-system : lando